# SunMail

./: .gitignore  Dockerfile.test  README.md  docker-compose.yml  package-lock.json
src/api/: Dockerfile  package-lock.json  package.json
src/api/src/: .env  gmail.js
src/api/src/config/: .env.docker  .env.local  .env.test
src/api/src/controllers/: blacklist.js  labels.js  mails.js  tokens.js  users.js
src/client/: Dockerfile  package-lock.json  package.json
src/client/public/: index.html
src/client/src/: App.js  AppRouter.jsx  index.js
src/cpp/: .env  CMakeLists.txt  Dockerfile.client  Dockerfile.server
src/cpp/src/App/: App.cpp  App.h
src/cpp/src/BloomFilter/: BloomFilter.cpp  BloomFilter.h  IFilter.h
src/cpp/src/Command/: CommandParser.cpp  CommandParser.h  DeleteCommand.cpp  DeleteCommand.h  GetCommand.cpp  GetCommand.h  ICommand.h  PostCommand.cpp  PostCommand.h
src/cpp/src/Execute/: IExecutor.h  ThreadExecutor.cpp  ThreadExecutor.h  oneExecutor.cpp  oneExecutor.h
src/cpp/src/Hash/: IHash.h  StdHash.cpp  StdHash.h
src/cpp/src/Input/: IInput.h  StandardInput.cpp  StandardInput.h
src/cpp/src/Save/: FileSaveFilter.cpp  FileSaveFilter.h  FileSaveURL.cpp  FileSaveURL.h  ISaveFilter.h  ISaveURL.h
src/cpp/src/Server/: Server.cpp  Server.h  client.py
src/cpp/tests/: BF_AddTest.cpp  BF_CheckTest.cpp  BF_ConstrTest.cpp  BF_HashTest.cpp  BF_IsBlackTest.cpp  BF_RemoveTest.cpp  CommandParserTest.cpp  FileSaveFilterTests.cpp  FileSaveURLTests.cpp  GetCommandTests.cpp  HashTestSuite.h  PostCommandTest.cpp  StandardInputTests.cpp  StdHashTest.cpp
(+68 files in other folders)
